welcome.lessons.welcome.array.has271.Has271.scala.code
def has271(nums:Array[Int]): Boolean = {
	var h:Boolean = false
	for (k<-0 to nums.length -3) {
		if (nums(k+1) == nums(k) +5 && (nums(k+2) == nums(k)-1 ||nums(k+2)==nums(k) +1))) {
			h=true 
		}
	}
	return h
}
